# RocketTracker

./: .gitignore  .gitmodules  Makefile  README.md  remotescript.sh
RocketTracker-Sw/: General Roadmap.md  README.md
RocketTracker-Sw/basestation_software/: .gitignore  Makefile  cacheserver.py  log_analysis.py  logdialog.ui  main.py  main.spec  mainwindow.py  mainwindow.ui  maptest.py  receiver.py  requirements.txt  util.py
RocketTracker-Sw/basestation_software/old/: ble_controller.py
RocketTracker-Sw/basestation_software/pyqtlet2_web_alt/: map.html
RocketTracker-Sw/cli/: .gitignore  TRACKER2_CFG_BACK.json  basestation-cli.py  cli.py  filtering_tests.ipynb  gen_protos.sh  gen_test_data.py  link.py  log_200hz.pickle  log_2hz.pickle  log_2hz_long.pickle  log_analysis.ipynb  log_analysis_v2.ipynb  log_debugging.ipynb  log_mag_cal.pickle  log_shook_200g_200hz.pickle  loglib.py  logtool.py  mag_cal.py  requirements.txt  spec.txt  tcp_link.py  test_calibration.py  test_link.py  testscript.py  tracker2_cfg.json  tracker3_cfg.json  util.py
RocketTracker-Sw/comms_lib/: crctabgen.py  frame_manager.cpp  frame_manager.h  frame_manager_common.h  library.json
RocketTracker-Sw/protocol/: protocol.options  protocol.proto
RocketTracker-Sw/receiver_firmware/: .gitignore  CMakeLists.txt  Makefile  buildscript.sh  de_esc.py  load.sh  parse_errs.py  radio.cpp.patch  testsend.py
RocketTracker-Sw/receiver_firmware/src/: .usb_descriptors.cpp.swp  global.h  main.cpp  pinout.h  tusb_config.h  usb_descriptors.c  usb_descriptors.cpp  vgps.cpp  vgps.h
RocketTracker-Sw/receiver_firmware/src/comms/: comms_lib  frame_manager.cpp  frame_manager.h  radio.cpp  radio.h
RocketTracker-Sw/receiver_firmware/src/display/: font.h  ssd1306.cpp  ssd1306.h
RocketTracker-Sw/receiver_firmware/src/test/: testdecoder.cpp  testencoder.cpp
RocketTracker-Sw/rtrk-config/: .gitignore  MUI requirements.md  configgen.py  configparse.py  info.txt
RocketTracker-Sw/rtrk-config/configfiles/: calibration_config.jsonc  dd_config.jsonc  debug_config.jsonc  lora_radio_config.jsonc  tracker_config.jsonc  wifi_config.jsonc
RocketTracker-Sw/rtrk_gui/: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  main.h
RocketTracker-Sw/rtrk_gui/link/: frame_manager_v2.cpp  frame_manager_v2.hpp  link.cpp  link.hpp
RocketTracker-Sw/rtrk_gui/menus/: configurator.hpp  connection_menu.cpp  connection_menu.hpp  data_viewer.cpp  data_viewer.hpp  debug_view_menu.cpp  debug_view_menu.hpp  map_menu.cpp  map_menu.hpp  menu_interface.hpp
RocketTracker-Sw/rtrk_gui/menus/link/: frame_manager_v2.cpp  frame_manager_v2.hpp  link_menu.cpp  link_menu.hpp
RocketTracker-Sw/tracker-firmware-v3/: .gitignore  BUGS.md  CMakeLists.txt  filter_test.ipynb  gen_pbs.sh  parseerrors.txt  sdkconfig  sdkconfig.old  tcptest.py
RocketTracker-Sw/tracker-firmware-v3/components/configuration/: CMakeLists.txt  configuration.c  configuration.h
RocketTracker-Sw/tracker-firmware-v3/components/fmgr_c/: CMakeLists.txt  fmgr.cpp  fmgr.h
RocketTracker-Sw/tracker-firmware-v3/components/fmgr_c/generator/proto/: nanopb_pb2.py
RocketTracker-Sw/tracker-firmware-v3/main/: CMakeLists.txt  alt_filter.cpp  alt_filter.h  config_defaults.h  configuration.c  configuration.h  configutils.c  configutils.h  defs.h  encoded_reader.c  encoded_reader.h  idf_component.yml  logging.c  logging.h  main.c  pindefs.h  prelog.c  prelog.h  sensors.c  sensors.h  tracker_config.h
RocketTracker-Sw/tracker_firmware/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
RocketTracker-Sw/tracker_firmware/include/: pindefs.h
RocketTracker-Sw/tracker_firmware/src/: main.cpp  main_leds.c
RocketTracker-Sw/tracker_firmware_v2/: CMakeLists.txt  data_analysis.ipynb  platformio.ini  sdkconfig.esp32-s3-devkitc-1
RocketTracker-Sw/tracker_firmware_v2/src/: main.cpp  pindefs.h
caching_proxy/: Cargo.toml
caching_proxy/src/: lib.rs  main.rs
doc/: book.toml
hardware/: README.md  RocketTracker-SparkFun.kicad_sym  RocketTracker_Symbols.bak  RocketTracker_Symbols.kicad_sym
hardware/BaseStationHAT/: BaseStationHAT.csv  BaseStationHAT.kicad_pcb  BaseStationHAT.kicad_prl  BaseStationHAT.kicad_pro  BaseStationHAT.kicad_sch  BaseStationHAT.xml  SL871.bak
hardware/BaseStationHAT/BaseStationHAT/: BaseStationHAT.kicad_prl
hardware/BaseStationHAT/Mfg/: BaseStationHAT-B_Silkscreen.gbr  BaseStationHAT-Edge_Cuts.gbr  BaseStationHAT-F_Mask.gbr  BaseStationHAT-F_Paste.gbr  BaseStationHAT-F_Silkscreen.gbr  (+3 more)
hardware/CONREVSMA003.062/: CONREVSMA003.062.lib  LINX_CONREVSMA003.062.kicad_mod
hardware/Rocket Tracker/: Rocket Tracker.csv  Rocket Tracker.kicad_pcb  Rocket Tracker.kicad_prl  Rocket Tracker.kicad_pro  Rocket Tracker.kicad_sch  Rocket Tracker.kicad_sch-bak  Rocket Tracker.xml  fp-info-cache  fp-lib-table  sym-lib-table
hardware/UniversalBaseStationHAT/: SL871.kicad_sym  UniversalBaseStationHAT.kicad_pcb  UniversalBaseStationHAT.kicad_prl  UniversalBaseStationHAT.kicad_pro  UniversalBaseStationHAT.kicad_sch  fp-lib-table  sym-lib-table
protobufs/: configuration.proto  messages.proto
seeker_backend/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
seeker_backend/event_derive/: Cargo.toml
seeker_backend/event_derive/src/: lib.rs
seeker_backend/res/: compass.frag  compass.vert
seeker_backend/src/: adapters.rs  configuration.rs  endpoints.rs  events.rs  items.proto  main.rs  peripherals.rs  protos.rs  tracker.rs  websocket.rs
seeker_frontend/: .env  .eslintrc  README.md  eventstest.js  package-lock.json  package.json
seeker_frontend/public/: index.html
seeker_frontend/src/: App.css  App.js  AppContainer.js  BackendConnection.js  Map.js  RealtimeEvents.js  Settings.js  Tabs.css  Terminal.js  TrackerList.js  Viewport.js  index.js
seeker_sw/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.json  radiotest-old.py  radiotest.py
seeker_sw/res/: compass.vert
seeker_sw/src/: configuration.rs  main.rs  peripherals.rs  widgets.rs
tracker_fw/: .gitignore  compile_protos.py  platformio.ini
tracker_fw/src/: tracker_fw.ino
(+81 files in other folders)
