[package]
name = "seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
# Configuration
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
# Argument parsing
clap = { version = "3.2.5", features = ["derive"] }
# Radio communication, utility
prost = "0.10.4"
byteorder = "1.4.3"
# GPS data interpretation
nmea = "0.2.0"
chrono = "0.4"
# Calibration 
average = "0.13.1"
tokio = { version = "1.20.1", features = ["full"] }
# rfm9x = "0.1.2"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = { version = "0.13.1", features = ["hal"] }

[build-dependencies]
prost-build = { version = "0.10.4" }
