[package]
name = "seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
# Configuration and serialization
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
typetag = "0.2"
# Argument parsing
clap = { version = "3.2.5", features = ["derive"] }
# Radio communication, utility
prost = "0.10.4"
byteorder = "1.4.3"
# GPS data interpretation
nmea = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
# Calibration 
average = "0.13.1"
# Async and servers
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17.3"
tokio-tungstenite = "0.17.2"
futures = "0.3"
warp = "0.3"
hyper-tls = "0.5.0"
hyper = { version = "0.14", features = ["full"] }
# Async functions in adapter traits
async-trait = "0.1.57"
# IMU shenanigans
ahrs = "0.5"
nalgebra = "0.30"
# QOL Macros
event_derive = { path = "./event_derive/" }
# Logging
log = "0.4.0"
env_logger = "0.8.4"

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dependencies.caching_proxy]
path = "../caching_proxy/"

[[bin]]
name = "seeker_backend"
path = "src/main.rs"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = { version = "0.13.1", features = ["hal"] }

[build-dependencies]
prost-build = { version = "0.10.4" }
