[package]
name = "seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_cbor = "0.11.2"
clap = { version = "3.2.5", features = ["derive"] }
eframe = { version = "0.18.0" }
glow = "0.11"
egui_glow = { version = "0.18.1", features = ["winit"] }
serde_bson = "0.0.1"
prost = "0.10.4"
nmea = "0.2.0"
image = "0.24.2"
# rfm9x = "0.1.2"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = { version = "0.13.1", features = ["hal"] }

[build-dependencies]
prost-build = { version = "0.10.4" }
